--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,22 +4,32 @@
     <title>Myrailsapp</title>
     <%= csrf_meta_tags %>
 
+    <link rel="stylesheet" href='https:/maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
 
   <body>
-  	<nav>
-  		<ul>
-  			<li>Home</li>
-  			<li>About</li>
-  			<li>Contact</li>
+  	<nav class= "navbar navbar-fixed-top">
+  		<ul class="nav navbar-nav navbar-left"> 
+  			<li class="active"><a href="#index" class="nav-item">Home</a></li>
+  			<li><a href="#about" class="nav-item">About</a></li>
+  			<li><a href="#contact" class="nav-item">Contact</a></li>
   		</ul>
   	</nav>
 
-    <%= yield %>
+    <div class="page-wrap">
 
-    <footer>
+      <%= yield %>
+
+    </div>
+
+    <footer class="site-footer">
     	&copy; 2017 Bike Berlin
     </footer>
   </body>
