--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
   <body>
 
   	<nav class= "navbar navbar-fixed-top">
-  		<ul class="nav navbar-nav navbar-left"> 
-  			<li class="active"><a href="#index" class="nav-item">Home</a></li>
-  			<li><a href="#about" class="nav-item">About</a></li>
-  			<li><a href="#contact" class="nav-item">Contact</a></li>
+  		<ul class="nav navbar-nav navbar-left">
+  			<li class="active"><%= link_to "Home", root_path, class: "nav-item" %></li> 
+        <li><%= link_to "About", static_pages_about_path, class: "nav-item" %></li>
+        <li><%= link_to "Contact", static_pages_contact_path, class: "nav-item" %></li>
   		</ul>
   	</nav>
 
