--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,10 @@
     <title>Myrailsapp</title>
     <%= csrf_meta_tags %>
 
-    <link rel="stylesheet" href='https:/maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="https:/maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -17,8 +15,8 @@
 
   <body>
     <nav class= "navbar navbar-fixed-top">
-      <ul class="nav navbar-nav navbar-left">
-        <li class="active"><%= link_to "Home", root_path, class: "nav-item" %></li>
+      <ul class= "nav navbar-nav navbar-left">
+        <li class= "active"><%= link_to "Home", root_path, class: "nav-item" %></li>
         <li><%= link_to "About", static_pages_about_path, class: "nav-item" %></li>
         <li><%= link_to "Contact", static_pages_contact_path, class: "nav-item" %></li>
       </ul>
@@ -31,5 +29,6 @@
     <footer class="site-footer">
     	&copy; 2017 Bike Berlin
     </footer>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
