--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About Us</h1>
-<p>This app helps people to find used bikes in Berlin.</p>
+<div class= "container spacing">
+  <h1>About Us</h1>
+  <p>This app helps people to find used bikes in Berlin.</p>
+</div>
