--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,7 @@
-<h1>Contact Us</h1>
-<h2>Looking for a second hand bike? then give us a call or drop an email. We will help you to find affordable and great deals</h2>
-<p>Tel No: +1234567890</p>
-<p>Email Address: info@bikeberlin.com</p>
+<div class= "container spacing">
+  <h1>Contact Us</h1>
+  <h2>Looking for a second hand bike? then give us a call or drop an email. We will help you to find affordable and great deals</h2>
+  <p>Tel No: +1234567890</p>
+  <p>Email Address: info@bikeberlin.com</p>
+</div>
 
