--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,6 @@
-<h1 class="main title"> Welcome to Bike Berlin</h1>
-<h2 class="main home-content">Your source for used bikes in Berlin</h2>
-<%= image_tag("bike-1.jpg", class: "img-responsive index-image") %>
+<div class= "container spacing">
+  <h1 class="main title"> Welcome to Bike Berlin</h1>
+  <h2 class="main home-content">Your source for used bikes in Berlin</h2>
+  <%= image_tag("bike-1.jpg", class: "img-responsive index-image") %>
+</div>
 
