--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -18,6 +18,8 @@ body {
   padding-top: 0px;
 }
 
+.container { padding-top: 100px; }
+
 .spacing { padding-top: 50px; }
 
 .navbar { background-color: #ccd9ff; }
