--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,2 @@
-<div class= "container spacing">
-  <h1>About Us</h1>
-  <p>This app helps people to find used bikes in Berlin.</p>
-</div>
+<h1 class="main title">About Us</h1>
+<p class="body-text">This app helps people to find used bikes in Berlin.</p>
