--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,6 @@
-<div class= "container spacing">
-  <h1>Contact Us</h1>
-  <h2>Looking for a second hand bike? then give us a call or drop an email. We will help you to find affordable and great deals</h2>
-  <p>Tel No: +1234567890</p>
-  <p>Email Address: info@bikeberlin.com</p>
-</div>
+<h1 class="main title">Contact Us</h1>
+<h2 class="main content">Looking for a second hand bike? then give us a call or drop an email. We will help you to find affordable and great deals</h2>
+<p class="body-text">Tel No: +1234567890</p>
+<p class="body-text">Email Address: info@bikeberlin.com</p>
+
 
