--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main {
+  font-family: Helvetica, "Times New Roman", Georgia, Serif;
+  color: #000;
+  padding: 10px 0 10px 20px;
+}
+
+.title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 70px;
+} 
+
+.body-text {
+  padding-left: 20px;
+  font-size: 18px;
+}
+
+.field {
+  padding: 10px 0px 10px 20px;
+
+}
+
+.actions {
+  padding-left: 30px;
+  font-weight: bold;
+}
