--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -16,60 +16,11 @@ html, body { height: 100% }
 body {
   background-color: #fffeee;
   padding-top: 0px;
+  margin: 0px;
 }
 
-.container { padding-top: 100px; }
-
-.spacing { padding-top: 50px; }
-
-.navbar { background-color: #ccd9ff; }
-
-.navbar a {
-  color: #000066;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.main {
-  font-family: Helvetica, "Times New Roman", Georgia, Serif;
-  color: #000;
-  padding: 10px 0 10px 20px;
-}
-
-.title {
-  font-size: 30px;
-  font-weight: bold;
-} 
-
-.home-contect { font-size: 24px; }
-
-.page-wrap {
-  min-height: 100%;
-  margin-bottom: -60px; 
-}
-
-.page-wrap:after {
-  content: "";
-  display: block;
-}
-
-.site-footer, .page-wrap:after { height: 75px; }
-
-.site-footer {
-  background-color: #ccd9ff; 
-  font-family: Helvetica, "Times New Roman", Georgia, Serif;
-  font-size: 18px;
-  padding: 20px;
-  text-align: center;
-}
-
-
-
-html, body { height: 100% }
-
-body {
-  background-color: #fffeee;
-  padding-top: 0px;
+.container {
+  margin: 0px;
 }
 
 .navbar { background-color: #ccd9ff; }
@@ -92,11 +43,18 @@ body {
   margin-top: 70px;
 } 
 
-.home-contect { font-size: 24px; }
+.content { font-size: 24px; }
+
+.body-text {
+  padding-left: 20px;
+  font-size: 18px;
+}
 
 .page-wrap {
+  eight: auto;
   min-height: 100%;
-  margin-bottom: -75px; 
+  margin: 0px;
+  margin-bottom: -50px; 
 }
 
 .page-wrap:after {
@@ -104,7 +62,7 @@ body {
   display: block;
 }
 
-.site-footer, .page-wrap:after { height: 75px; }
+.site-footer, .page-wrap:after { height: 50px; }
 
 .site-footer {
   background-color: #ccd9ff; 
@@ -112,5 +70,10 @@ body {
   font-size: 18px;
   padding: 20px;
   text-align: center;
+}
+
+.index-image {
+  display: block;
+  margin: 0 auto;
 }
 
