--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
+<p class="body-text" id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1 class="main title">Products</h1>
 
 <table>
   <thead>
