--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <nav class= "navbar navbar-fixed-top">
       <ul class= "nav navbar-nav navbar-left">
         <li class= "active"><%= link_to "Home", root_path, class: "nav-item" %></li>
+        <li><%= link_to "Products", products_path, class: "nav_item" %></li>
         <li><%= link_to "About", static_pages_about_path, class: "nav-item" %></li>
         <li><%= link_to "Contact", static_pages_contact_path, class: "nav-item" %></li>
       </ul>
