--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,27 @@
   </head>
 
   <body>
-    <nav class= "navbar navbar-fixed-top">
-      <ul class= "nav navbar-nav navbar-left">
-        <li class= "active"><%= link_to "Home", root_path, class: "nav-item" %></li>
-        <li><%= link_to "Products", products_path, class: "nav_item" %></li>
-        <li><%= link_to "About", static_pages_about_path, class: "nav-item" %></li>
-        <li><%= link_to "Contact", static_pages_contact_path, class: "nav-item" %></li>
-      </ul>
-    </nav>
+
+  <nav class="navbar navbar-default">
+    <div class="container-fluid"> <!--nav container -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button><!-- end hamburger menu -->
+      </div><!-- end navbar-header -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-left">
+          <li><%= link_to "Home", root_path, class: "nav-item" %></li>
+          <li><%= link_to "Products", products_path, class: "nav_item" %></li>
+          <li><%= link_to "About", static_pages_about_path, class: "nav-item" %></li>
+          <li><%= link_to "Contact", static_pages_contact_path, class: "nav-item" %></li>
+        </ul>
+      </div><!-- nav -->
+    </div> <!-- end nav container -->
+  </nav><!-- end navbar -->
     
     <div class="page-wrap">
       <%= yield %>
