--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,11 +1,13 @@
-<div class="col-sm-2 col-md-4">
-    <%= image_tag(product.image_url, class: "img-responsive") %>
-    <a href="#"><h1><%= product.name %></h1></a>
-    <p><%= product.description %></p>
-    <strong><%= product.price %></strong>
-    <p><%= link_to 'Show', product %></p>
-    <p><%= link_to 'Edit', edit_product_path(product) %></p>
-    <p><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure' } %></p>
+<div class="product-item col-lg-4 col-md-6 col-xs-12">
+    <%= image_tag(product.image_url, class: "img-responsive product-images") %>
+    <div class="product-info">
+      <a href="#"><h1><%= product.name %></h1></a>
+      <p><%= product.description %></p>
+      <strong><%= product.price %></strong>
+    </div><br >
+      <p><%= link_to 'Show', product %></p>
+      <p><%= link_to 'Edit', edit_product_path(product) %></p>
+      <p><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure' } %></p>
 </div> 
 
 
