--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,10 @@
 <h1 class="main title">New Product</h1>
 
-<%= render 'form', product: @product %>
+  <%= render 'form', product: @product %>
 
-<%= link_to 'Back', products_path %>
+
+<div class= "admin-links links-to-pages">
+  <%= link_to 'Back', products_path %>
+</div>
+
+
