--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,35 +10,44 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-container">
+    <div class="row">
+      <div class="col-lg-1 col-md-2" ></div>
+      <div class="col-lg-10 col-md-8 col-xs-12">
+        <form class="links-form">
+          <div class="form-group">
+            <%= form.label :name, class: "form-label" %>
+            <%= form.text_field :name, id: :product_name, class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :product_name %>
+          <div class="form-group">
+            <%= form.label :description, class: "form-label" %>
+            <%= form.text_area :description, id: :product_description, class: "form-control", size: '50x5' %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :image_url, class: "form-label" %>
+            <%= form.text_field :image_url, id: :product_image_url, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :colour, class: "form-label" %>
+            <%= form.text_field :colour, id: :product_colour, class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= form.label :price, class: "form-label" %>
+            <%= form.text_field :price, id: :product_price, class: "form-control" %>
+          </div>
+
+          <div class="actions">
+            <%= form.submit %>
+          </div>
+        <% end %>
+      </form>
+    <div class="col-lg-1 col-md-2"></div>
   </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description, id: :product_description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image_url %>
-    <%= form.text_field :image_url, id: :product_image_url %>
-  </div>
-
-  <div class="field">
-    <%= form.label :colour %>
-    <%= form.text_field :colour, id: :product_colour %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.text_field :price, id: :product_price %>
-  </div>
+</div><!-- end container -->
 
 
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
