--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,13 +1,18 @@
-<div class="product-item col-lg-4 col-md-6 col-xs-12">
-    <%= image_tag(product.image_url, class: "img-responsive product-images") %>
+<div class="product-item col-lg-3 col-md-4 col-xs-12">
+    <%= link_to image_tag(product.image_url, class: "img-responsive product-images"), product %>
     <div class="product-info">
-      <a href="#"><h1><%= product.name %></h1></a>
+      <a href="#"><h3 class="product-name-title"><%= product.name %></h1></a>
       <p><%= product.description %></p>
       <strong><%= product.price %></strong>
     </div><br >
-      <p><%= link_to 'Show', product %></p>
-      <p><%= link_to 'Edit', edit_product_path(product) %></p>
-      <p><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure' } %></p>
+    <div class="admin-links">
+      <ul class="links-to-pages">
+        <li><%= link_to 'Show', product %></li>
+        <li><%= link_to 'Edit', edit_product_path(product) %></li>
+        <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure' } %></li>
+      </ul>
+      <hr >
+    </div>
 </div> 
 
 
