--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,11 @@
+<div class="new-product-button">
+  <button class="btn btn-primary new-product">
+    
+      <%= link_to 'New Product', new_product_path %>
+    
+  </button>
+</div>
+
 <p class="body-text" id="notice"><%= notice %></p>
 
 <h1 class="main title">Products</h1>
@@ -10,7 +18,6 @@
   </div>
 </div>
 
-<br>
 
-<%= link_to 'New Product', new_product_path %>
+
 
