--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,11 +3,11 @@
     <div class="product-info">
       <a href="#"><h3 class="product-name-title"><%= product.name %></h1></a>
       <p><%= product.description %></p>
-      <strong><%= product.price %></strong>
+      <strong><%= number_to_currency(product.price, unit: '£', precision: 2) %></strong>
     </div><br >
     <div class="admin-links">
       <ul class="links-to-pages">
-        <li><%= link_to 'Show', product %></li>
+        <li><%= link_to 'Show', product_path(product) %></li>
         <li><%= link_to 'Edit', edit_product_path(product) %></li>
         <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure' } %></li>
       </ul>
