--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,7 @@
 
 <p class="body-text">
   <strong>Price: </strong>
-  <%= @product.price %>
+  <%= number_to_currency(@product.price, unit: '£', precision: 2) %>
 </p><br >
 
 
