--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -158,3 +158,8 @@ button.new-product a:hover {
   color: #000;
   font-size: 22px;
 }
+
+form.search-form {
+  float: right;
+  margin: 0 10px 10px 0;
+}
