--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,34 @@
 <h1 class="main title">Contact Us</h1>
-<h2 class="main content">Looking for a second hand bike? then give us a call or drop an email. We will help you to find affordable and great deals</h2>
-<p class="body-text">Tel No: +1234567890</p>
-<p class="body-text">Email Address: info@bikeberlin.com</p>
+<br >
+
+<%= flash[:notice] %>
+
+<%= form_with(url: "/static_pages/thank_you") do |form| %>
+  <div class="row">
+    <div class="col-lg-1 col-md-2" ></div>
+    <div class="col-lg-10 col-md-8 col-xs-12">
+      <div class="form-group">
+        <%= form.label :name, class: "form-label" %>
+        <%= form.text_field :name, class: "form-control", placeholder: "Enter Name" %>
+      </div>
+      <div class="form-group">
+        <%= form.label :email, "Email Address", class: "form-label" %>
+        <%= form.text_field :email, class: "form-control", placeholder: "Enter Email" %>
+      </div>
+      <div class="form-group">
+        <%= form.label :message, class: "form-label" %>
+        <%= form.text_area :message, class: "form-control", placeholder: "Enter Message" %>
+      </div>
+      
+      <div class="col-lg-1 col-md-2"></div>
+    </div>
+  </div>
+  <%= form.submit "Send", class: "form-label" %>
+<% end %>
+
+
+
+
+
 
 
