--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,7 +3,7 @@
 
 <%= flash[:notice] %>
 
-<%= form_with(url: "/static_pages/thank_you") do |form| %>
+<%= form_with(url: "/static_pages/thank_you", method: "post", local: true) do |form| %>
   <div class="row">
     <div class="col-lg-1 col-md-2" ></div>
     <div class="col-lg-10 col-md-8 col-xs-12">
@@ -19,11 +19,13 @@
         <%= form.label :message, class: "form-label" %>
         <%= form.text_area :message, class: "form-control", placeholder: "Enter Message" %>
       </div>
+      <div class="actions">
+        <%= form.submit "Send", class: "form-label" %>
+      </div>
       
       <div class="col-lg-1 col-md-2"></div>
     </div>
   </div>
-  <%= form.submit "Send", class: "form-label" %>
 <% end %>
 
 
