--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,9 @@
       </div><!-- nav --> 
     </div> <!-- end nav container -->
   </nav><!-- end navbar -->
-    
+    <!-- flash notice tags -->
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p> <!-- end flash notice tags -->
     <div class="page-wrap">
       <%= yield %>
     </div>
