--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -167,3 +167,15 @@ form.search-form {
 .panel {
   margin: 10px 20px;
 }
+
+.devise-link-text a {
+ margin: 10px 50px;
+}
+
+#remember-me-text { display: inline; }
+
+.login-header {
+  margin: 0 0 20px 40px;
+  
+}
+
