--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -19,8 +19,8 @@
         <%= form.label :message, class: "form-label" %>
         <%= form.text_area :message, class: "form-control", placeholder: "Enter Message" %>
       </div>
-      <div class="actions">
-        <%= form.submit "Send", class: "form-label" %>
+      <div class="">
+        <%= form.submit "Send", class: "btn btn-primary form-label" %>
       </div>
       
       <div class="col-lg-1 col-md-2"></div>
