--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -37,13 +37,13 @@ transition: color 400ms ease !important;
 .main {
   font-family: Helvetica, "Times New Roman", Georgia, Serif;
   color: #000;
-  padding: 10px 0 10px 20px;
+  padding: 0 0 10px 20px;
 }
 
 .title {
   font-size: 30px;
   font-weight: bold;
-  margin-top: 70px;
+  margin-top: 20px;
 } 
 
 .content { font-size: 24px; }
