--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,13 @@
   </nav><!-- end navbar -->
 
     <!-- flash notice tags -->
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p> <!-- end flash notice tags -->
+    <% if notice %>
+      <p id="notice" class="alert alert-info"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p id="alert" class="alert alert-info"><%= alert %></p>
+    <% end %> <!-- end flash notice tags -->
     
     <div class="page-wrap">
       <%= yield %>
