--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -28,17 +28,17 @@ body {
 }
 
 .navbar a:hover {
-background-color: #d9d9d9 !important;
-color: #ff6633 !important;
-transition: color 400ms ease !important;
--webkit-transition: color 400ms ease !important;
+  background-color: #d9d9d9 !important;
+  color: #ff6633 !important;
+  transition: color 400ms ease !important;
+  -webkit-transition: color 400ms ease !important;
 }
 
 .main {
   font-family: Helvetica, "Times New Roman", Georgia, Serif;
   color: #000;
   padding: 0 0 10px 20px;
-}
+}     
 
 .title {
   font-size: 30px;
@@ -106,16 +106,14 @@ transition: color 400ms ease !important;
   text-align: center;
   padding: 20px 5px 10px 5px;
   margin: 10px 10px 30px 10px;
+  display: block;
 }
 
 .links-to-pages li {
   display: inline;
-  padding: 15px;
-}
-
-.links-to-pages {
   padding: 5px;
 }
+
 
 .links-to-pages a {
   color: #003399;
@@ -149,9 +147,11 @@ button.new-product a:hover {
 .form-label { margin: 10px 50px; }
 
 .product-show-image {
-  height: 250px;
+  height: 300px;
   width: auto;
-  margin: 20px 30px;
+  margin: auto;
+  margin-top: 50px;
+
 }
 
 .product-name-title {
@@ -176,6 +176,27 @@ form.search-form {
 
 .login-header {
   margin: 0 0 20px 40px;
-  
 }
+
+.product-info-box {
+  border-left: 2px solid #000;
+  margin: 5px 10px;
+  padding-top: 10px;
+}
+
+div.product-info-box {
+  height: auto;
+  width: 60%;
+  margin: 50px auto;
+}
+
+.product-info-text {
+  padding-left: 10px;
+  font-size: 18px;
+}
+
+.price-text { color: #003399; }
+
+
+
 
