--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <p class="body-text" id="notice"><%= notice %></p>
 
 <!-- higest rating product -->
-<!-- <%= @product.highest_rating_comment %> -->
+<%= @product.highest_rating_comment %>
   <div class="row">
     <div class="col-md-8 col-xs-12">
       <div>
