--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,6 +35,8 @@
       </div>
     </div>
   </div>
+<hr >
+  <%= render 'new_comment' %>
 <br >
 
 <div class="admin-links">
@@ -44,11 +46,8 @@
   </ul>
 </div>
 
-<hr >
 
-<div claas="rating-review-section"> 
-      <h2><small>Rating & Reviews:</small></h2>
-</div>
+
 
 
 
