--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <li><%= link_to "Contact", static_pages_contact_path, class: "nav-item" %></li>
         </ul>
         <!-- login/logout button -->
-        <ul class="nav pull-right">
+        <ul class="nav navbar-nav pull-right">
           <li>
             <% if user_signed_in? %>
               <%= link_to('Logout', destroy_user_session_path) %>
