--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,41 +3,29 @@
 <!-- higest rating product -->
 <%= @product.highest_rating_comment %>
   <div class="row">
-    <div class="col-md-8 col-xs-12">
+    <div class="col-md-6 col-xs-12">
       <div>
         <%= image_tag(@product.image_url, class: "img-responsive product-show-image") %>
       </div>
     </div>
-    <div class="col-md-4 col-xs-12">
+    <div class="col-md-6 col-xs-12">
       <div class="product-info-box">
         <p class="product-info-text">
-          <strong>Name:</strong>
-          <%= @product.name %>
-        </p>
-
+          <strong><%= @product.name %></strong></p>
         <p class="product-info-text">
-          <strong>Description:</strong>
-          <%= @product.description %>
+          <%= @product.description %>, <%= @product.colour %>
         </p>
-
-        <p class="product-info-text">
-          <strong>Colour:</strong>
-          <%= @product.colour %>
-        </p>
-
+        <br >
         <p class="product-info-text price-text">
           <strong>Price: </strong>
           <%= number_to_currency(@product.price, unit: '£', precision: 2) %>
         </p>
-
-        <p class="product-info-text">Average Rating: ..... </p>
-
+        <p class="product-info-text">Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></p>
       </div>
     </div>
   </div>
-<hr >
   <%= render 'new_comment' %>
-<br >
+  <%= render 'comments' %>
 
 <div class="admin-links">
   <ul class="links-to-pages">
