--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,15 +24,26 @@
       </div>
     </div>
   </div>
-  <%= render 'new_comment' %>
-  <%= render 'comments' %>
 
-<div class="admin-links">
+  <div class="admin-links">
   <ul class="links-to-pages">
     <li><%= link_to 'Edit', edit_product_path(@product) %></li>
     <li><%= link_to 'Back', products_path %></li>
   </ul>
 </div>
+
+  <%= render 'new_comment' %>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+  
+  <%= render 'comments' %>
+
+  <%= will_paginate @comments %>
+
+  
+
+
+
+
 
 
 
