--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,6 +19,14 @@
       <p class="product-info-text">Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></p>
       <!-- higest rating product -->
       <!-- <%= @product.highest_rating_comment %> -->
+      <br >
+      <!-- stripe checkout -->
+      <div class="product-info-text">
+      <%= form_with(url: '/payment/create') do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </div>
+        
     </div>
   </div>
 </div>
