--- a/app/views/user_mailer/order_placed.html.erb
+++ b/app/views/user_mailer/order_placed.html.erb
@@ -4,7 +4,7 @@
       <td><h2>Thanks for your purchase, <%= @name %>!</h2></td>
     </tr>
     <tr>
-      <td><p>Your order <%= @product.name %> will be delivered within x working days.</p></td>
+      <td><p>Your order <%= @product.name %> will be delivered within 5 working days.</p></td>
     </tr>
     <tr>
       <td><p><strong>Your <%= @appname %> Team!</strong></p></td>
