--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,11 +18,11 @@
       </p>
       <p class="product-info-text">Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></p>
       <!-- higest rating product -->
-      <%= @product.highest_rating_comment %>
+      <p class="product-info-text"> Highest Rating: <%= @product.highest_rating_comment %></p>
       <br >
       <!-- stripe checkout -->
       <div class="product-info-text">
-      <%= form_with(url: '/payment/create') do |form| %>
+      <%= form_with(url: '/payments/create') do |form| %>
         <%= render partial: "shared/stripe_checkout_button" %>
         <%= hidden_field_tag(:product_id, @product.id) %>
         <% end %>
