--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6 col-xs-12">
     <div>
-      <%= image_tag(@product.image_url, class: "img-responsive product-show-image") %>
+      <%= image_tag(@product.image_url, class: "img-responsive product-show-image img-zoom", data_zoom_image: @product.image_url) %>
     </div>
   </div>
   <div class="col-md-6 col-xs-12">
