--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
         <strong>Price: </strong>
         <%= number_to_currency(@product.price, unit: '£', precision: 2) %>
       </p>
-      <p class="product-info-text">Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div></p>
+      <p class="product-info-text">Average Rating: <div id="#average-rating" class="rated" data-score="<%= @product.average_rating %>"></div></p>
       <!-- higest rating product -->
       <p class="product-info-text"> Highest Rating: <%= @product.highest_rating_comment %></p>
       <br >
