--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="product-comment">
 <% if signed_in? %>
-  <h4>Add a review:</h4>
+  <p id="review-header" class="product-info-text">Add a review:</p><br >
   <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
     <p>
       <%= f.label :body, "Comments" %><br>
