--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -17,9 +17,9 @@ var refreshRating = function(){
   });
 };
 
-$(document).on('turbolinks:load', function(){
+$(document).on('turbolinks:load ajaxSuccess', function(){
   refreshRating();
-  
+
   $('.img-zoom').elevateZoom({
     zoomType: 'lens',
     lensShape: 'round',
