--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,9 +12,9 @@
 
 <div class="container-fluid">
   <div class="row">
-    
+    <% cache(cache_key_for_products) do %><!-- outer fragment caching -->
       <%= render @products %>
-    
+    <% end %><!-- end of outer fragment caching -->
   </div>
 </div>
 
