--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,18 +1,12 @@
-<div class="container content-container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1>Order Details</h1>
-    </div><!-- end col-->
-      <div class="col-md-12 order-list">
-        <h4>
-          Order # <%= @order.id %>:
-          <%= link_to @order.product.name, @order.product %>
-        </h4>
-        <p><%= @order.product.description %></p>
-        <strong>€ <%= @order.product.price %>0</strong>
-      </div><!-- /col -->
-  </div>
-  <div class="col-md-12 controls">
-    <%= link_to 'Back', orders_path %>
-  </div><!-- end controls -->
+<div class="row">
+  <% @orders.each do |order| %>
+    <div class="col-sm-2 col-md-4">
+      <h1>
+        Order # <%= order.id %>:
+        <%= link_to order.product.name, order.product %>
+      </h1>
+      <p><%= order.product.description %></p>
+      <strong>$ <%= order.product.price %></strong>
+    </div><!-- /col -->
+  <% end %>
 </div>
