--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,14 +1,16 @@
-<h1>
-  My Orders
-</h1>
-<div class="row">
-  <% @orders.each do |order| %>
-    <div class="col-sm-2 col-md-4">
-      <h2>Order # <%= order.id %></h2>
-      <p>Product: <%= order.product.name %></p>
-      <strong>Total: $<%= order.total %></strong>
-    </div>
-  <% end %>
- </div>
-<%= link_to 'Back', root_path, class: "btn btn-defualt btn-link btn-lg" %>
+<h1 class="main title">List of Orders:</h1>
+<div class="container">
+  <div class="row">
+    <% @orders.each do |order| %>
+      <div class="col-sm-2 col-md-4">
+        <h3>
+          Order # <%= order.id %>
+          <%= link_to order.product.name, order.product %>
+        </h3>
+        <strong>Total: £<%= order.total %></strong>
+      </div>
+    <% end %>
+  </div>
 </div>
+
+
