--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="main title">List of Orders:</h1>
+<h1 class="main title">Orders:</h1>
 <div class="container">
   <div class="row">
     <% @orders.each do |order| %>
